--- a/CMS/CMS.Web/Views/Interviews/MyInterviews.cshtml
+++ b/CMS/CMS.Web/Views/Interviews/MyInterviews.cshtml
@@ -151,10 +151,32 @@
                                    
                                 }
                                 <td><a class="bx bx-history" style="font-size:x-large" asp-action="ShowHistory" asp-route-id="@item.InterviewsId"></a></td>
-
                                 <td>
                                     <input type="hidden" name="StatusId" value="@item.StatusId" />
-                                    <a class="bx bxs-edit-alt" style="font-size:x-large" asp-action="UpdateAfterInterviewForEdit" asp-route-id="@item.InterviewsId"></a>
+                                    @if (User.IsInRole("Interviewer"))
+                                    {
+                                        @if (item.Score != null)
+                                        {
+                                        <a class="bx bxs-edit-alt" style="font-size:x-large" asp-action="UpdateAfterInterviewForEdit" asp-route-id="@item.InterviewsId"></a>
+                                        }
+                                        else
+                                        {
+                                        <a class="bx bxs-edit-alt" style="font-size:x-large" href="javascript:void(0);" onclick="showScoreWarningModal()"></a>
+                                        }
+                                    }
+                                    else if (User.IsInRole("General Manager") || User.IsInRole("HR Manager") || User.IsInRole("Solution Architecture"))
+                                    {
+                                        if (item.StatusName == StatusCode.GetName("PND"))
+                                        {
+                                            <a class="bx bxs-edit-alt" style="font-size:x-large" href="javascript:void(0);" onclick="showScoreWarningModalForGM()"></a>
+
+                                        }
+                                        else
+                                        {
+                                            <a class="bx bxs-edit-alt" style="font-size:x-large" asp-action="UpdateAfterInterviewForEdit" asp-route-id="@item.InterviewsId"></a>
+
+                                        }
+                                    }
                                 </td>
 
                             </tr>
@@ -167,3 +189,72 @@
 </div><!--end row-->
 
 
+
+@* For the Interviewer Role *@
+<div class="modal fade" id="scoreWarningModal" tabindex="-1" role="dialog" aria-labelledby="scoreWarningModalLabel" aria-hidden="true">
+    <div class="modal-dialog" role="document">
+        <div class="modal-content">
+            <div class="modal-header">
+                <h5 class="modal-title" id="scoreWarningModalLabel">Oops! The Result Is Missing</h5>
+                <button type="button" class="close" data-dismiss="modal" aria-label="Close" onclick="closeScoreWarningModals()">
+                    <span aria-hidden="true">&times;</span>
+                </button>
+            </div>
+            <div class="modal-body">
+                <p>Uh-oh! It seems like the result is missing. Before you proceed, make sure to add the result for this interview. Your insights matter!</p>
+            </div>
+            <div class="modal-footer">
+                <button type="button" class="btn btn-secondary" onclick="closeScoreWarningModals()">Close</button>
+            </div>
+        </div>
+    </div>
+</div>
+
+<script src="https://code.jquery.com/jquery-3.6.4.min.js"></script>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.min.js"></script>
+
+ <script>
+    function showScoreWarningModal() {
+        $('#scoreWarningModal').modal('show');
+    }
+</script>
+<script>
+    function closeScoreWarningModals() {
+        $('#scoreWarningModal').modal('hide');
+    }
+</script>
+
+
+@* For the others Role *@
+
+
+<div class="modal fade" id="scoreWarningModal2" tabindex="-1" role="dialog" aria-labelledby="scoreWarningModalLabel" aria-hidden="true">
+    <div class="modal-dialog" role="document">
+        <div class="modal-content">
+            <div class="modal-header">
+                <h5 class="modal-title" id="scoreWarningModalLabel">Oops! The Result Is Missing</h5>
+                <button type="button" class="close" data-dismiss="modal" aria-label="Close" onclick="closeScoreWarningModal()">
+                    <span aria-hidden="true">&times;</span>
+                </button>
+            </div>
+            <div class="modal-body">
+                <p>Uh-oh! It seems like the result is missing. Before you proceed, make sure to add the result for this interview. Your insights matter!</p>
+            </div>
+            <div class="modal-footer">
+                <button type="button" class="btn btn-secondary" onclick="closeScoreWarningModal()">Close</button>
+            </div>
+        </div>
+    </div>
+</div>
+
+
+<script>
+    function showScoreWarningModalForGM() {
+        $('#scoreWarningModal2').modal('show');
+    }
+</script>
+<script>
+    function closeScoreWarningModal() {
+        $('#scoreWarningModal2').modal('hide');
+    }
+</script>
