--- a/CMS/CMS.Web/Views/Interviews/MyInterviews.cshtml
+++ b/CMS/CMS.Web/Views/Interviews/MyInterviews.cshtml
@@ -29,6 +29,11 @@
             @Html.Label("Filter by Company:")
                 @Html.DropDownList("companyFilter", ViewBag.CompanyList as SelectList, "Select a Company", new { @class = "form-control" })
             </div>
+
+                <div class="col-md-3">
+                    @Html.Label("Filter by Track:")
+                    @Html.DropDownList("trackFilter", ViewBag.TrackList as SelectList, "Select a Track", new { @class = "form-control" })
+                </div>
             }
         <div class="col-md-3" style="margin-top: 27px;">
             <label>&nbsp;</label>
@@ -53,6 +58,7 @@
                         <tr>
                             <th>Candidate Name</th>
                             <th>Level</th>
+                            <th>Track</th>
                             <th hidden>Interviewer</th>
                             <th>Date</th>
                             <th>Time</th>
@@ -86,6 +92,7 @@
                             <tr>
                                 <td>@Html.DisplayFor(modelItem => item.FullName)</td>
                                 <td>@Html.DisplayFor(modelItem => item.Name)</td>
+                                <td>@Html.DisplayFor(modelItem => item.TrackName)</td>
                                 <td hidden>@item.InterviewerName</td>
                                 <td>@item.Date.ToString("dd-MM-yyyy")</td>
                                 <td>@item.Date.ToString("h:mm tt")</td>
@@ -168,11 +175,11 @@
                                     {
                                         @if (item.Score != null)
                                         {
-                                        <a class="bx bxs-edit-alt" style="font-size:x-large" asp-action="UpdateAfterInterviewForEdit" asp-route-id="@item.InterviewsId"></a>
+                                            <a class="bx bxs-edit-alt" style="font-size:x-large" asp-action="UpdateAfterInterviewForEdit" asp-route-id="@item.InterviewsId"></a>
                                         }
                                         else
                                         {
-                                        <a class="bx bxs-edit-alt" style="font-size:x-large" href="javascript:void(0);" onclick="showScoreWarningModal()"></a>
+                                            <a class="bx bxs-edit-alt" style="font-size:x-large" href="javascript:void(0);" onclick="showScoreWarningModal()"></a>
                                         }
                                     }
                                     else if (User.IsInRole("General Manager") || User.IsInRole("HR Manager") || User.IsInRole("Solution Architecture"))
@@ -201,71 +208,31 @@
 
 
 
-@* For the Interviewer Role *@
-<div class="modal fade" id="scoreWarningModal" tabindex="-1" role="dialog" aria-labelledby="scoreWarningModalLabel" aria-hidden="true">
-    <div class="modal-dialog" role="document">
-        <div class="modal-content">
-            <div class="modal-header">
-                <h5 class="modal-title" id="scoreWarningModalLabel">Oops! The Result Is Missing</h5>
-                <button type="button" class="close" data-dismiss="modal" aria-label="Close" onclick="closeScoreWarningModals()">
-                    <span aria-hidden="true">&times;</span>
-                </button>
-            </div>
-            <div class="modal-body">
-                <p>Uh-oh! It seems like the result is missing. Before you proceed, make sure to add the result for this interview. Your insights matter!</p>
-            </div>
-            <div class="modal-footer">
-                <button type="button" class="btn btn-secondary" onclick="closeScoreWarningModals()">Close</button>
-            </div>
-        </div>
-    </div>
-</div>
+<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/sweetalert2@10">
 
-<script src="https://code.jquery.com/jquery-3.6.4.min.js"></script>
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.min.js"></script>
+<script src="https://cdn.jsdelivr.net/npm/sweetalert2@10"></script>
 
- <script>
+<script>
     function showScoreWarningModal() {
-        $('#scoreWarningModal').modal('show');
+        Swal.fire({
+            icon: 'warning',
+            title: 'Oops! The Result Is Missing',
+            text: 'Uh-oh! It seems like the result is missing. Before you proceed, make sure to add the result for this interview. Your insights matter!',
+            showCancelButton: false,
+            confirmButtonText: 'Close',
+            allowOutsideClick: false,
+        });
     }
-</script>
-<script>
-    function closeScoreWarningModals() {
-        $('#scoreWarningModal').modal('hide');
-    }
-</script>
 
-
-@* For the others Role *@
-
-
-<div class="modal fade" id="scoreWarningModal2" tabindex="-1" role="dialog" aria-labelledby="scoreWarningModalLabel" aria-hidden="true">
-    <div class="modal-dialog" role="document">
-        <div class="modal-content">
-            <div class="modal-header">
-                <h5 class="modal-title" id="scoreWarningModalLabel">Oops! The Result Is Missing</h5>
-                <button type="button" class="close" data-dismiss="modal" aria-label="Close" onclick="closeScoreWarningModal()">
-                    <span aria-hidden="true">&times;</span>
-                </button>
-            </div>
-            <div class="modal-body">
-                <p>Uh-oh! It seems like the result is missing. Before you proceed, make sure to add the result for this interview. Your insights matter!</p>
-            </div>
-            <div class="modal-footer">
-                <button type="button" class="btn btn-secondary" onclick="closeScoreWarningModal()">Close</button>
-            </div>
-        </div>
-    </div>
-</div>
-
-
-<script>
     function showScoreWarningModalForGM() {
-        $('#scoreWarningModal2').modal('show');
+        Swal.fire({
+            icon: 'warning',
+            title: 'Oops! The Result Is Missing',
+            text: 'Uh-oh! It seems like the result is missing. Before you proceed, make sure to add the result for this interview. Your insights matter!',
+            showCancelButton: false,
+            confirmButtonText: 'Close',
+            allowOutsideClick: false,
+        });
     }
 </script>
-<script>
-    function closeScoreWarningModal() {
-        $('#scoreWarningModal2').modal('hide');
-    }
-</script>
+
